# busse-document-downloader

./: .gitignore  Dockerfile  Dockerfile_CLI  app_functions.py  catalog  cli.py  cli.py.bak  docker-compose.yml  docker.sh  main.py  pyproject.toml  requirements.txt
documents/: dmr.xlsx
static/files/: 723_list_of_files__09282023095808.txt  723_list_of_files__09282023100749.txt  723_list_of_files__09282023102251.txt  723_list_of_files__09282023102953.txt
templates/: base.html  main.html  swu.html
templates/fragment/: document_results.html  gathered_files.html  not_found.html  results.html  results_list.html
