[tool.poetry]
name = "busse-document-downloader"
version = "0.1.0"
description = ""
authors = ["jlmodell <modell.jeff@me.com>"]
readme = "README.md"
packages = [{include = "busse_document_downloader"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pyinstaller = "^5.13.0"
pandas = "^2.0.3"
openpyxl = "^3.1.2"
fastapi = "^0.101.1"
apscheduler = "^3.10.4"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
fastapi-nextauth-jwt = "^1.1.2"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
